# family-activities

./: LinkRow.swift  README.md
FamilyActivities/: Activity.swift  ActivityDetailView.swift  ActivityItemView.swift  ActivityListView.swift  ActivityView.swift  Bundle-Decodable.swift  ContentView.swift  CrewScroll.swift  DetailView.swift  EditPersonalView.swift  FamilyActivitiesApp.swift  FeedView.swift  FileLinkView.swift  Friend.swift  GroupDetailView.swift  HomeView.swift  ItemDetailView.swift  LinkRow.swift  Personal.swift  PersonalActivity.swift  PersonalActivityDetailView.swift  PersonalActivityListView.swift  PersonalCalendarView.swift  PersonalItem.swift  PersonalItemDate.swift  PersonalListItem.swift  PersonalListView.swift  PersonalListingView.swift  PersonalRecommendation.swift  PersonalRecommendationDetailView.swift  PersonalRecommendationListView.swift  PersonalView.swift  Recommendation.swift  RecommendationActivity.swift  RecommendationActivityDetailView.swift  RecommendationDetailView.swift  RecommendationListView.swift  RecommendationView.swift  Sight.swift  TabPageView.swift  (+7 more)
FamilyActivities.xcodeproj/: project.pbxproj
FamilyActivities/Activities/: ActivityDetailView.swift  ActivityItemView.swift  ActivityListView.swift  ActivityView.swift  FileLinkView.swift
FamilyActivities/Data Model/: Activity.swift  AddedActivity.swift  Journal.swift  Location.swift  NewActivity.swift  NewItinerary.swift  PersonalActivity.swift  PersonalListItem.swift  (+1 more)
Python/alltrails-scraping/: pyproject.toml
Python/alltrails-scraping/tests/: test_alltrails_scraping.py
(+30 files in other folders)
