[tool.poetry]
name = "alltrails-scraping"
version = "0.1.0"
description = ""
authors = ["Annalie <annaliakruseman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
